# AngeVoice

./: .cnb.yml  .env.dev  .env.example  .env.prod  .env.staging  .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  ANGEVOICE_TTS_BACKEND_PATCH.md  CHANGELOG.md  Dockerfile  FIX_PLAN.md  HOTFIX_REPORT_2.6.5.3.1.md  LICENSE  README.md  README_EN.md  RELEASE_NOTES_2.6.5.0.md  RELEASE_NOTES_2.6.5.1.md  RELEASE_NOTES_2.6.5.2.md  RELEASE_NOTES_2.6.5.3.1.md  RELEASE_NOTES_2.6.5.3.md  THIRD_PARTY_NOTICES.md  app.py  constraints.txt  pyproject.toml
.github/workflows/: ci.yml  container.yml  docker-smoke.yml
docker/: .env.example  angevoice.env  entrypoint.sh  select-registry.sh
docker/cpu/: Dockerfile  docker-compose.yml
docker/gpu/: Dockerfile  docker-compose.yml
docker/legacy-gpu/: Dockerfile  README.md  docker-compose.moss-cuda.yml  docker-compose.yml
docs/: ANGE_READER_BACKEND_ADAPTER.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_PROFILES.md  FNOS_FPK.md  LICENSE_COMPLIANCE.md  MODEL_RUNTIME.md  MOSS_AUDIO_QUALITY.md  NEW_MODEL_ADAPTER_GUIDE.md  REACT_BITS_NOTICE.md  README.md  RELEASE.md  RELEASE_NOTES_2.6.615.md  ROADMAP.md  SECURITY.md  SERVICE_PROFILES.md  TROUBLESHOOTING.md  V2_4_FEATURES.md  V2_5_FEATURES.md
docs/images/: README_SPONSOR_PLACEHOLDER.txt
hf-demo/: DEPLOY_MODELSCOPE.md  Dockerfile  README.md  app.py
licenses/: README.md
models/: README.md
packaging/fnos/AngeVoice/: LICENSE  NOTICE  manifest
packaging/fnos/AngeVoice/app/docker/: angevoice.env  docker-compose.cpu.yaml  docker-compose.gpu.yaml  docker-compose.legacy-gpu.yaml  docker-compose.yaml
packaging/fnos/AngeVoice/app/ui/: config
packaging/fnos/AngeVoice/cmd/: _lib.sh  config_callback  install_callback  install_init  main  uninstall_callback  upgrade_callback  upgrade_init
packaging/fnos/AngeVoice/config/: resource
packaging/fnos/AngeVoice/wizard/: config  install  uninstall  upgrade
packaging/fnos/App.AI.AngeVoice/: LICENSE  manifest
packaging/fnos/App.AI.AngeVoice/app/docker/: angevoice.env  (+1 more)
packaging/fnos/App.AI.AngeVoice/cmd/: config_callback  config_init  install_callback  install_init  main  uninstall_callback  uninstall_init  upgrade_callback  upgrade_init
packaging/fnos/App.AI.AngeVoice/config/: privilege  resource
packaging/fnos/App.AI.AngeVoice/wizard/: config  install  uninstall
scripts/: analyze_audio_quality.py  benchmark_streaming.py  build_fnos_release.sh  build_source_release_zip.py  e2e_loop_test.sh  install.sh  smoke_test.sh
scripts/install/lib/: common.sh  docker.sh  network.sh
src/kokoro_tts/: __init__.py  admin_auth.py  admin_config_schema.py  api_models.py  audio.py  audio_formats.py  banner.py  cli.py  config.py  config_api_key.py  config_env.py  config_ids.py  engine.py  engine_manager.py  kokoro_assets.py  latency_tracker.py  model_assets.py  model_sources.py  moss_engine.py  moss_engine_streaming.py  prompt_audio.py  rate_limit.py  security.py  server.py  service_extras.py  service_state.py  text_segmenter.py  validation.py  zh_rules.py
src/kokoro_tts/admin_config/: __init__.py  fields.py  schema.py
src/kokoro_tts/admin_config/groups/: __init__.py  cache.py  core.py  moss.py  resources.py  security.py  streaming.py  text.py  zipvoice.py
src/kokoro_tts/contracts/: runtime.py  streaming.py  synthesis.py
src/kokoro_tts/engines/: parameters.py  registry.py
src/kokoro_tts/engines/adapters/: __init__.py  kokoro.py
src/kokoro_tts/hf_demo/: DEPLOY_MODELSCOPE.md  README.md  app.py
src/kokoro_tts/moss/: __init__.py  postprocess.py  process_worker.py  prompt.py  runtime.py  text.py  vram.py
src/kokoro_tts/resources/: runtime_status.py
src/kokoro_tts/routes/: __init__.py  admin.py  admin_models.py  admin_runtime.py  audio.py  status.py  ws.py  zipvoice.py
src/kokoro_tts/services/: streaming_service.py  synthesis_service.py  voice_profile_service.py
src/kokoro_tts/services/state_parts/: __init__.py  cache_state.py  model_registry.py  request_registry.py  resource_state.py  stats_state.py
src/kokoro_tts/static/: admin.css  admin.js  app.css  app.js  security_notice.js
src/kokoro_tts/static/locale/: messages.en.js  messages.zh-cn.js  translate.js
src/kokoro_tts/templates/: admin.html  api_docs.html  app.html  index.html
src/kokoro_tts/text/: __init__.py  frontend.py  legacy.py  polyphone.py  protection.py  tn.py
src/kokoro_tts/workers/: __init__.py  factories.py  process_worker.py
src/kokoro_tts/ws/: session.py
src/kokoro_tts/zipvoice/: engine.py
tests/: test_admin_assets_fnos.py  test_admin_config_schema.py  test_admin_config_schema_characterization_2615.py  test_audio_postprocess.py  test_basic.py  test_container_profiles.py  test_dependency_hardening_2615.py  test_docker_integration.py  test_extension_architecture.py  test_fnos_image_tags_2615.py  test_moss_characterization_2615.py  test_product_features_packaging.py  test_public_repository_cleanliness.py  test_quality_regressions.py  test_regression_pr_feedback.py  test_release_closeout_2615.py  test_runtime_resilience_and_admin.py  test_security_auth.py  test_security_codeql_2615.py  test_security_hardening.py  test_service_state_characterization_2615.py  test_status_routes_characterization_2615.py  test_stream.py  test_synthesis_input_validation.py  test_text_frontend_recovery_tn.py  test_text_legacy_characterization_2615.py  test_text_segmenter.py  test_torch_warning_fixes.py  test_v26601_hardening.py  test_ws_cancel_characterization_2615.py  test_zipvoice_cpu_runtime.py  test_zipvoice_preparation_boundary_recovery.py
tts-project-cpu/app/: main.py
tts-project-gpu/app/: main.py
xiaozhi/: MANAGER_PRESETS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
xiaozhi/adapters/: angevoice.py  angevoice_clone.py  angevoice_stream.py
xiaozhi/examples/: config-kokoro-openai.yaml  config-kokoro-stream.yaml  config-moss-clone.yaml  config-moss-stream.yaml  config-zipvoice-clone.yaml  config-zipvoice-stream.yaml  docker-compose.patch.example.yml
xiaozhi/manager/: presets.yaml
xiaozhi/prompts/: README.md
xiaozhi/scripts/: install-xiaozhi-adapter.sh
(+4 files in other folders)
