[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angevoice"
version = "2.5.0"
description = "AngeVoice: lightweight Chinese TTS service built on Kokoro v1.1"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "安歌", email = "ang77712829@users.noreply.github.com"},
]
keywords = ["tts", "chinese", "kokoro", "speech-synthesis", "ai", "openai-compatible", "angevoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro>=0.8.2",
    "misaki[zh]>=0.8.2",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
]

[project.scripts]
angevoice = "kokoro_tts.cli:main"
kokoro-tts = "kokoro_tts.cli:main"

[project.urls]
Homepage = "https://github.com/ang77712829/AngeVoice"
Repository = "https://github.com/ang77712829/AngeVoice"
Documentation = "https://github.com/ang77712829/AngeVoice#readme"
Issues = "https://github.com/ang77712829/AngeVoice/issues"
Changelog = "https://github.com/ang77712829/AngeVoice/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kokoro_tts = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
