[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angevoice"
version = "2.6.615"
description = "AngeVoice: self-hosted TTS service integrating Kokoro, MOSS-TTS-Nano and ZipVoice"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "安歌", email = "ang77712829@users.noreply.github.com"},
]
keywords = ["tts", "chinese", "kokoro", "moss-tts-nano", "zipvoice", "speech-synthesis", "ai", "openai-compatible", "angevoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro>=0.8.2",
    "misaki[zh]>=0.8.2",
    "jieba>=0.42.1",
    "pypinyin>=0.50.0",
    "torch>=2.0.0",
    "transformers>=4.53.0,<4.54",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "transformers>=4.53.0,<4.54",
]
moss = [
    "torchaudio>=2.0.0",
    "sentencepiece>=0.2.1",
    "huggingface_hub>=0.30.0",
    "modelscope>=1.27.0",
    "onnxruntime>=1.20.0",
]
zipvoice = [
    "torchaudio>=2.0.0",
    "onnxruntime>=1.20.0",
    "huggingface_hub>=0.30.0",
    "lhotse>=1.24.0",
    "vocos>=0.1.0",
    "pydub>=0.25.1",
    "cn2an>=0.5.22",
    "inflect>=7.0.0",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp310-cp310-win_amd64.whl ; python_version == '3.10' and platform_system == 'Windows' and platform_machine == 'AMD64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp311-cp311-win_amd64.whl ; python_version == '3.11' and platform_system == 'Windows' and platform_machine == 'AMD64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp312-cp312-win_amd64.whl ; python_version == '3.12' and platform_system == 'Windows' and platform_machine == 'AMD64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl ; python_version == '3.10' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl ; python_version == '3.11' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl ; python_version == '3.12' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.10' and platform_system == 'Linux' and platform_machine == 'aarch64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.11' and platform_system == 'Linux' and platform_machine == 'aarch64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.12' and platform_system == 'Linux' and platform_machine == 'aarch64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp310-cp310-macosx_10_9_x86_64.whl ; python_version == '3.10' and platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp311-cp311-macosx_10_9_x86_64.whl ; python_version == '3.11' and platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp312-cp312-macosx_10_13_x86_64.whl ; python_version == '3.12' and platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp310-cp310-macosx_11_0_arm64.whl ; python_version == '3.10' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp311-cp311-macosx_11_0_arm64.whl ; python_version == '3.11' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "piper_phonemize @ https://github.com/csukuangfj/piper-phonemize/releases/download/2025.06.23/piper_phonemize-1.3.0-cp312-cp312-macosx_11_0_arm64.whl ; python_version == '3.12' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "safetensors>=0.4.0",
    "setuptools<81",
]
tn = [
    "wetext>=0.1.4",
]
moss-gpu = [
    "torchaudio>=2.0.0",
    "sentencepiece>=0.2.1",
    "huggingface_hub>=0.30.0",
    "modelscope>=1.27.0",
    "onnxruntime-gpu==1.20.2",
    "nvidia-cudnn-cu12==9.1.0.70",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.scripts]
angevoice = "kokoro_tts.cli:main"
kokoro-tts = "kokoro_tts.cli:main"

[project.urls]
Homepage = "https://github.com/ang77712829/AngeVoice"
Repository = "https://github.com/ang77712829/AngeVoice"
Documentation = "https://github.com/ang77712829/AngeVoice#readme"
Issues = "https://github.com/ang77712829/AngeVoice/issues"
Changelog = "https://github.com/ang77712829/AngeVoice/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kokoro_tts = ["templates/*.html", "static/*", "static/locale/*.js", "zipvoice/*.json"]
